# libprocman

./: .gitattributes  README.md  meson.build
.github/workflows/: main.yml
src/: circularbuffer.hpp  extprocess.cpp  extprocess.h  extprocess.hpp  pm.cpp  pm.hpp
testsrc/: circularbuffer_test.cpp  meson.build  pm_test.cpp
